# learn-opengl

./: CMakeLists.txt
res/Shaders/: fragment.glsl
src/: Renderer.cpp  Renderer.h  Utils.h  main.cpp
src/classes/: Display.h  IndexBuffer.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
src/classes/defs/: Display.cpp  IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
